Fetched Api Data

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style></style>
   </head>
   <body>
-    <h1 class="bg-red-500">Initial setup for Assignment-6</h1>
+    <h1 class="bg-green-500">Initial setup for Assignment-6</h1>
 
     <!-- utility js file -->
     <script src="./js/utility.js"></script>
