--- a/index.html
+++ b/index.html
@@ -12,11 +12,42 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- tailwind css cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- custom tailwind -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: "rgba(37, 37, 37, 0.2)",
+            },
+          },
+        },
+      };
+    </script>
     <!-- Custom css -->
-    <style></style>
+    <style>
+      .primary-btn {
+        background: rgba(37, 37, 37, 0.2);
+      }
+    </style>
   </head>
   <body>
-    <h1 class="bg-green-500">Initial setup for Assignment-6</h1>
+    <!-- header -->
+    <header data-header class="">
+      <nav data-nav class="flex justify-around items-center h-20">
+        <div><img src="./Logo.png" class="w-40" alt="" /></div>
+        <button class="bg-primary px-5 py-2 rounded-lg">Sort by view</button>
+        <button class="bg-red-400 text-white px-5 py-2 rounded-lg">Blog</button>
+      </nav>
+    </header>
+
+    <!-- main -->
+    <main>
+      <div data-btn-container class="text-center py-10 space-x-4"></div>
+
+      <!-- Card Container -->
+      <div card-container class="p-16 grid grid-cols-4 gap-3"></div>
+    </main>
 
     <!-- utility js file -->
     <script src="./js/utility.js"></script>
