--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           extend: {
             colors: {
               primary: "rgba(37, 37, 37, 0.2)",
+              "light-text": "rgba(23, 23, 23, 0.70)",
+              verified: "#2568EF",
             },
           },
         },
@@ -29,12 +31,23 @@
       .primary-btn {
         background: rgba(37, 37, 37, 0.2);
       }
+
+      .verified {
+        background-color: #2568ef;
+        color: #fff;
+        padding: 5px;
+        font-weight: bolder;
+        font-size: 6px;
+        border-radius: 50%;
+      }
     </style>
   </head>
   <body>
     <!-- header -->
     <header data-header class="">
-      <nav data-nav class="flex justify-around items-center h-20">
+      <nav
+        data-nav
+        class="flex flex-wrap gap-y-5 justify-around items-center h-20">
         <div><img src="./Logo.png" class="w-40" alt="" /></div>
         <button class="bg-primary px-5 py-2 rounded-lg">Sort by view</button>
         <button class="bg-red-400 text-white px-5 py-2 rounded-lg">Blog</button>
@@ -42,11 +55,15 @@
     </header>
 
     <!-- main -->
-    <main>
-      <div data-btn-container class="text-center py-10 space-x-4"></div>
+    <main class="px-1 py-10 md:p-16">
+      <div
+        data-btn-container
+        class="text-center py-10 grid grid-cols-2 md:grid-cols-4 gap-y-6 mx-auto justify-center space-x-4"></div>
 
       <!-- Card Container -->
-      <div card-container class="p-16 grid grid-cols-4 gap-3"></div>
+      <div
+        card-container
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-center mx-auto"></div>
     </main>
 
     <!-- utility js file -->
