--- a/index.html
+++ b/index.html
@@ -31,23 +31,14 @@
       .primary-btn {
         background: rgba(37, 37, 37, 0.2);
       }
-
-      .verified {
-        background-color: #2568ef;
-        color: #fff;
-        padding: 5px;
-        font-weight: bolder;
-        font-size: 6px;
-        border-radius: 50%;
-      }
     </style>
   </head>
   <body>
     <!-- header -->
-    <header data-header class="">
+    <header data-header>
       <nav
         data-nav
-        class="flex flex-wrap gap-y-5 justify-around items-center h-20">
+        class="flex flex-wrap gap-y-5 justify-around items-center h-20 pt-10 md:pt-2">
         <div><img src="./Logo.png" class="w-40" alt="" /></div>
         <button class="bg-primary px-5 py-2 rounded-lg">Sort by view</button>
         <button class="bg-red-400 text-white px-5 py-2 rounded-lg">Blog</button>
@@ -55,15 +46,19 @@
     </header>
 
     <!-- main -->
-    <main class="px-1 py-10 md:p-16">
+    <main class="px-1 md:p-16">
       <div
         data-btn-container
-        class="text-center py-10 grid grid-cols-2 md:grid-cols-4 gap-y-6 mx-auto justify-center space-x-4"></div>
+        class="text-center space-y-3 pb-8 space-x-4"></div>
 
       <!-- Card Container -->
       <div
         card-container
-        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-center mx-auto"></div>
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-y-9 md:gap-y-7 gap-x-7 justify-center mx-auto"></div>
+      <!-- when no content found some error indication being displayed -->
+      <div
+        data-no-content
+        class="flex flex-col pt-20 space-y-6 items-center"></div>
     </main>
 
     <!-- utility js file -->
