added blog files and completed with all its answer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <title>Assignment-6</title>
     <!-- Daisy Ui CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css"
@@ -40,8 +40,8 @@
         data-nav
         class="flex flex-wrap gap-y-5 justify-around items-center h-20 pt-10 md:pt-2">
         <div><img src="./Logo.png" class="w-40" alt="" /></div>
-        <button class="bg-primary px-5 py-2 rounded-lg">Sort by view</button>
-        <button class="bg-red-400 text-white px-5 py-2 rounded-lg">Blog</button>
+        <button onclick="sortData()" class="bg-primary px-5 py-2 rounded-lg">Sort by view</button>
+        <button class="bg-red-400 text-white px-5 py-2 rounded-lg"><a href="./Blog.html">Blog</a></button>
       </nav>
     </header>
 
