--- a/Blog.html
+++ b/Blog.html
@@ -33,7 +33,81 @@
       }
     </style>
   </head>
-<body>
-      <h1>Blog</h1>
-</body>
+  <body>
+        <div
+        class="h-screen flex flex-col justify-center gap-y-3 items-center md:w-[60%] lg:w-[50%] mx-auto">
+        <h1 class="text-2xl py-3 lg:text-3xl font-bold ">Foundations of JavaScript: Exploring Null, Undefined, REST APIs, and More</h1>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="radio" name="my-accordion-2" checked="checked" />
+        <div class="collapse-title text-xl font-medium bg-green-400 text-white">
+          Discuss the scope of var, let, and const
+        </div>
+        <div class="collapse-content">
+          <p class="py-3">
+            <strong>Var: </strong>
+            Variables declared with var have function-level scope or global
+            scope, depending on where they are declared. This means that they
+            are accessible within the entire function in which they are declared
+            or globally if declared outside any function. However, var variables
+            are not block-scoped, which can lead to unexpected behavior in
+            certain situations.
+          </p>
+          <p class="py-3">
+            <strong>Let: </strong>
+            Variables declared with let have block-level scope. This means they
+            are accessible only within the block (curly braces) in which they
+            are declared. They have a more predictable behavior compared to var
+            and are recommended for most use cases.
+          </p>
+          <p>
+            <strong>Const:</strong>
+            Variables declared with const are also block-scoped like let, but
+            they have an additional characteristic: they cannot be reassigned
+            after their initial assignment. This makes them suitable for values
+            that should not change throughout the scope. However, it's important
+            to note that the immutability applies to the binding of the
+            variable, not necessarily the value it refers to. Objects and arrays
+            declared with const can have their properties or elements modified.
+          </p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="radio" name="my-accordion-2" />
+        <div class="collapse-title text-xl bg-green-400 text-white font-medium">
+          Tell us the use cases of null and undefined
+        </div>
+        <div class="collapse-content">
+          <p class="p-3">
+            <strong>undefined: </strong> undefined is a value that indicates a
+            variable has been declared but has not been assigned any value. It's
+            often used as the default value for variables that haven't been
+            initialized or for function parameters that are not provided.
+          </p>
+          <p class="p-3">
+            <strong>Null</strong>
+            null is a deliberate assignment value that represents the
+            intentional absence of any object value. It's often used to indicate
+            that a variable intentionally does not contain any value or that an
+            object property is intentionally empty.
+          </p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="radio" name="my-accordion-2" />
+        <div class="collapse-title text-xl bg-green-400 text-white font-medium">
+          What do you mean by REST API?
+        </div>
+        <div class="collapse-content">
+          <p class="py-3"><strong>REST API: </strong>REST API, which stands for Representational State Transfer Application Programming Interface, is a set of rules and conventions for building and interacting with web services. It is a widely used architectural style for designing networked applications, especially over the HTTP protocol. REST APIs are designed to enable communication between different software systems by following a set of principles that make the APIs scalable, maintainable, and easy to 
+            <p class="py-3"></p><strong>Common concepts: </strong>HTTP Methods: REST APIs use standard HTTP methods (verbs) to perform actions on resources. The most commonly used HTTP methods in REST are:
+
+            GET: Retrieve data from the server.
+            POST: Create new data on the server.
+            PUT: Update existing data on the server.
+            DELETE: Remove data from the server.
+      </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
