worked with some responsive issues

--- a/Blog.html
+++ b/Blog.html
@@ -35,7 +35,7 @@
   </head>
   <body>
         <div
-        class="h-screen flex flex-col justify-center gap-y-3 items-center md:w-[60%] lg:w-[50%] mx-auto">
+        class="h-screen px-2 flex flex-col justify-center gap-y-3 items-center md:w-[60%] lg:w-[50%] mx-auto">
         <h1 class="text-2xl py-3 lg:text-3xl font-bold ">Foundations of JavaScript: Exploring Null, Undefined, REST APIs, and More</h1>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" checked="checked" />
