--- a/Blog.html
+++ b/Blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=512&id=BzgkXhRueZg3&format=png" type="image/x-icon">
     <!-- Daisy Ui CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css"
@@ -35,15 +36,15 @@
   </head>
   <body>
         <div
-        class="h-screen px-2 flex flex-col justify-center gap-y-3 items-center md:w-[60%] lg:w-[50%] mx-auto">
-        <h1 class="text-2xl py-3 lg:text-3xl font-bold ">Foundations of JavaScript: Exploring Null, Undefined, REST APIs, and More</h1>
+        class="min-h-screen px-2 flex flex-col justify-center gap-y-3 items-center md:w-[60%] lg:w-[50%] mx-auto">
+        <h1 class="text-2xl  py-3 lg:text-3xl font-bold ">Foundations of JavaScript: Exploring Null, Undefined, REST APIs, and More</h1>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" checked="checked" />
         <div class="collapse-title text-xl font-medium bg-green-400 text-white">
           Discuss the scope of var, let, and const
         </div>
         <div class="collapse-content">
-          <p class="py-3">
+          <p class="py-3 ">
             <strong>Var: </strong>
             Variables declared with var have function-level scope or global
             scope, depending on where they are declared. This means that they
