--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment-6</title>
+    <title>PH-Tube</title>
     <!-- font awesome cdn -->
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=512&id=9itS6I2x2vV2&format=png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
